dnl $Id: configure.in,v 1.7 2002/01/11 17:42:47 melander Exp $

dnl Process this file with autoconf to produce a configure script.
AC_INIT(DietTopp, 0.1, , DietTopp.tar)
AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX

dnl Checks for libraries.
AC_CHECK_LIB(socket, accept)
AC_CHECK_LIB(nsl, gethostbyname)
AC_CHECK_LIB(m, floor)
AC_CHECK_LIB(posix4, nanosleep)

dnl Check for library functions.

dnl Check for headers.

dnl Check for type definitions.
AC_EGREP_HEADER(u_int16_t, sys/types.h, , AC_DEFINE(__NO_U_INT16_T))
AC_EGREP_HEADER(socklen_t, sys/socket.h, ,AC_DEFINE(__NO_SOCKLEN_T))

dnl Check for compiler support for exceptions.
AC_LANG_CPLUSPLUS

AC_TRY_RUN([main() {try{ int* a = new int; } catch (...) { int j = 0; } exit(0);}], exceptions_handled=yes, exceptions_handled=no)

if test "$exceptions_handled" = no; then
AC_DEFINE(__OLD_GCC)
CXXFLAGS="$CXXFLAGS -fhandle-exceptions"
COMPILER=CC
else
COMPILER=CXX
fi

case "$host_os" in
solaris*)
	AC_DEFINE(__SOLARIS_COMPILE)
	;;
linux*)
	AC_DEFINE(__LINUX_COMPILE)
	;;
esac

AC_SUBST(COMPILER)
AC_OUTPUT(Makefile)
